objects/kugo2p__TieredPricing__c.object
<CustomObject>
    <description>Kugamon - Related object to Salesforce Product that assigns a Price Book to a volume discount schedule.</description>
    <fields>
        <fullName>DiscountScheduleId__c</fullName>
        <description>The CPQ Discount Schedule Id this record was created from</description>
        <externalId>true</externalId>
        <inlineHelpText>The CPQ Discount Schedule Id this record was created from</inlineHelpText>
        <label>DiscountScheduleId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBookNameLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+kugo2p__Pricebook2Id__c,  kugo2p__PriceBookName__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBookName__c</fullName>
        <label>Deprecated</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Tiered Pricing</relationshipLabel>
        <relationshipName>Tiered_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Pricebook2Id__c</fullName>
        <label>Deprecated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tiered Pricing</relationshipLabel>
        <relationshipName>Tiered_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Type__c</fullName>
        <description>Volume, if Blank, will use the Tier Price as the Sales Prices for the Quantity.

Slab will calculate the Sales Price based on the all Tier Prices at and below the Quantity.</description>
        <inlineHelpText>Volume, if Blank, will use the Tier Price as the Sales Prices for the Quantity

Slab will calculate the Sales Price based on all Tier Prices at and below the Quantity</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume</fullName>
                    <default>true</default>
                    <label>Volume</label>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tiered Pricing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiered Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>